--- a/shared/geolocation_modal.handlebars
+++ b/shared/geolocation_modal.handlebars
@@ -1,21 +1,23 @@
-<div class="overlay  overlay--geo-privacy">
-    <div class="overlay__wrap">
-        <div class="overlay__content">
-            <div class="overlay--geo-privacy__icon"></div>
-            <h3 class="overlay__title">DDG.Text.GEOLOCATION_PRIVACY</h3>
-            <p class="overlay__text  overlay--geo-privacy__text">DDG.Text.GEOLOCATION_PRIVACY_DESC</p>
-            <ul class="overlay__btn-list">
-                <li class="overlay__btn-list__li">
-                    <a class="btn  btn--wire  overlay__btn  js-geo-privacy-precise" href="#" title=\"DDG.Text.PRECISE_LOCATION">DDG.Text.PRECISE_LOCATION</a>
+<div class="overlay-geo  overlay--geo-privacy">
+    <div class="overlay-geo__wrap">
+        <div class="overlay-geo__content">
+            <div class="overlay-geo--geo-privacy__icon"></div>
+            <h3 class="overlay-geo__title">DDG.Text.GEOLOCATION_PRIVACY</h3>
+            <p class="overlay-geo__text  overlay-geo--geo-privacy__text">DDG.Text.GEOLOCATION_PRIVACY_DESC</p>
+            <ul class="overlay-geo__btn-list">
+                <li class="overlay-geo__btn-list__li">
+                    <a class="btn  overlay-geo__btn  geo-btn-blue  js-geo-privacy-precise" href="#" title=\"DDG.Text.PRECISE_LOCATION">DDG.Text.PRECISE_LOCATION</a>
                 </li>
-                <li class="overlay__btn-list__li">
-                    <a class="btn  btn--wire  overlay__btn  js-geo-privacy-generic" href="#" title=\"DDG.Text.GENERIC_LOCATION">DDG.Text.GENERIC_LOCATION</a>
+                <div></div>
+                <li class="overlay-geo__btn-list__li">
+                    <a class="btn  overlay-geo__btn  geo-btn-dark  js-geo-privacy-generic" href="#" title=\"DDG.Text.GENERIC_LOCATION">DDG.Text.GENERIC_LOCATION</a>
                 </li>
             </ul>
             <label class="overlay--geo-privacy__remember">
-                <input type="checkbox" class="js-geo-privacy-remember" type="checkbox" checked="checked" />
-                DDG.Text.REMEMBER_SETTING
+                <input type="checkbox" class="geo-checkbox js-geo-privacy-remember" type="checkbox" checked="checked" />
+                DDG.Text.GEOLOCATION_REMEMBER_SETTING
             </label>
+            <p class="overlay-geo__text  overlay-geo--geo-privacy__text">DDG.Text.GEOLOCATION_CONFIRMATION</p>
         </div>
     </div>
 </div>
