--- a/shared/attribution.handlebars
+++ b/shared/attribution.handlebars
@@ -1,24 +1,24 @@
-<span class="popout-trig  js-popout {{popout.className}}  hide--screen-s  hide--mob">
-	<a class="attribution--link  js-popout-link"><span class="attribution--link__icon  ddgsi">I</span></a>
-<div class="popout-wrap  popout-wrap--{{popout.direction}}">
-	<div class="popout  popout--{{popout.direction}}  popout--lg  js-popout-main">
-		<div class="popout__body">
-			<div class="attribution">
-				<p class="tx-clr--slate">DDG.Text.ATTRIBUTION_STRING</p>
-				<hr class="attribution__hr"/>
-                                {{#if showDev}}
-				        {{#each developer}}
-					        <div class="tx-clr--slate-light">DDG.Text.ATTRIBUTION_DEV: <b class="tx-clr--slate">{{this.name}}</b></div>
-				        {{/each}}
-				        <hr class="attribution__hr"/>
-                                {{/if}}
-				<div class="gw">
-					<div class="g whole">
-						<a href="https://duck.co/ia/view/{{signal_from}}" class="btn btn--full attribution__btn">DDG.Text.MORE_INFO</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
+<span class="popout-trig  {{popout.className}}  hide--screen-s  hide--mob">
+    <a class="attribution--link  js-attribution-link"><span class="attribution--link__icon  ddgsi">I</span></a>
+    <div class="popout-wrap  popout-wrap--{{popout.direction}}">
+        <div class="popout  popout--{{popout.direction}}  popout--lg">
+            <div class="popout__body">
+                <div class="attribution">
+                    <p class="tx-clr--slate">DDG.Text.ATTRIBUTION_STRING</p>
+                    <hr class="attribution__hr"/>
+                    {{#if showDev}}
+                        {{#each developer}}
+                            <div class="tx-clr--slate-light">DDG.Text.ATTRIBUTION_DEV: <b class="tx-clr--slate">{{this.name}}</b></div>
+                        {{/each}}
+                        <hr class="attribution__hr"/>
+                    {{/if}}
+                    <div class="gw">
+                        <div class="g whole">
+                            <a href="https://duck.co/ia/view/{{signal_from}}" class="btn btn--full attribution__btn">DDG.Text.MORE_INFO</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </span>
