--- a/shared/attribution.handlebars
+++ b/shared/attribution.handlebars
@@ -1,3 +1,3 @@
-<span class="popout-trig  {{className}}  hide--screen-s  hide--mob">
+<span class="modal-trig  {{className}}  hide--screen-s  hide--mob">
     <a class="attribution--link  js-attribution-link"><span class="attribution--link__icon  ddgsi">I</span></a>
 </span>
