--- a/item_detail/videos_detail.handlebars
+++ b/item_detail/videos_detail.handlebars
@@ -6,7 +6,9 @@
         <div class="c-detail  detail__body__content">
             <h5 class="c-detail__title"><a href='{{url}}' title="{{title}}">{{title}}</a></h5>
             <div class="c-detail__desc">
-                <p class="c-detail__user"><i class="c-detail__icon  c-detail__user__icon">u</i> <a href='{{userURL}}'>{{{username}}}</a></p>
+                {{#if username}}
+                    <p class="c-detail__user"><i class="c-detail__icon  c-detail__user__icon">u</i> <a href='{{userURL}}'>{{{username}}}</a></p>
+                {{/if}}
                 <p class="c-detail__count"><i class="c-detail__icon  c-detail__count__icon">i</i> {{{viewCount}}}</p>
                 <p class="c-detail__date"><i class="c-detail__icon  c-detail__date__icon">&uArr;</i> {{{publishedDate}}}</p>
             </div>    
