--- a/core/maps_marker_popup.handlebars
+++ b/core/maps_marker_popup.handlebars
@@ -11,5 +11,15 @@
         {{#if displayLatLon}}
             <span class="mapview-marker__popup__latlon">{{{displayLatLon}}}</span>
         {{/if}}
+        {{#if address}}
+            <div class="mapview-marker__popup__directions">
+                <a href="{{directions}}" class="mapview-marker__popup__directions__link">D</a>
+                <select class="mapview-marker__popup__directions__dropdown js-directions-dropdown">
+                {{#each directionSources}}
+                    <option value="{{url}}">{{name}}</option>
+                {{/each}}
+                </select>
+            </div>
+        {{/if}}
     </span>
 {{/if}}
