--- a/core/metabar.handlebars
+++ b/core/metabar.handlebars
@@ -1,7 +1,6 @@
 <div class="metabar  metabar--fixed  js-zcm-sticky {{#if showDropdowns}}has-dropdowns{{/if}} {{#if hidden}}is-hidden{{/if}}">
 	<div class="metabar__in  js-metabar">
-    YAAYYYY
-		<span class="metabar__mode-wrap"><a class="btn--icon  metabar__mode  js-metabar-mode  is-disabled">YAAAAAAAAAY</a></span>
+		<span class="metabar__mode-wrap"><a class="btn--icon  metabar__mode  js-metabar-mode  is-disabled">{{initialModeIcon}}</a></span>
 		{{#if showMoreAt}}
 			<div class="metabar__more-at">
 				{{{moreAt this 'none'}}}
